compiladores/prueba/gen/gParser.java
// Generated from C:/Users/isaac/IdeaProjects/compiladores/prueba/src/main/g.g4 by ANTLR 4.13.1

import java.util.HashMap;
import java.util.Map;
import org.example.models.VariableInfo;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class gParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, ID=8, ENTERO=9, 
		REAL=10, TEXTO=11, IGUAL=12, MAS=13, MENOS=14, MULT=15, DIV=16, PUNTO_COMA=17, 
		ABRIR_PAR=18, CERRAR_PAR=19, COMENTARIO=20, COMENTARIO_MULTILINEA=21, 
		WS=22;
	public static final int
		RULE_programa = 0, RULE_sentencias = 1, RULE_declaraciones = 2, RULE_declaracion_asignacion = 3, 
		RULE_asignacion = 4, RULE_tipo = 5, RULE_escritura = 6, RULE_lectura = 7, 
		RULE_llamadaCaptura = 8, RULE_expresion = 9, RULE_factor_exp = 10, RULE_atomica_exp = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "sentencias", "declaraciones", "declaracion_asignacion", 
			"asignacion", "tipo", "escritura", "lectura", "llamadaCaptura", "expresion", 
			"factor_exp", "atomica_exp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Entero'", "'Real'", "'Texto'", "'Mensaje.Texto'", "'Captura.Texto()'", 
			"'Captura.Entero()'", "'Captura.Real()'", null, null, null, null, "'='", 
			"'+'", "'-'", "'*'", "'/'", "';'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "ID", "ENTERO", "REAL", 
			"TEXTO", "IGUAL", "MAS", "MENOS", "MULT", "DIV", "PUNTO_COMA", "ABRIR_PAR", 
			"CERRAR_PAR", "COMENTARIO", "COMENTARIO_MULTILINEA", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "g.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    Map<String, VariableInfo> tabla_simbolos = new HashMap<>();

	public gParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gVisitor ) return ((gVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			sentencias();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciasContext extends ParserRuleContext {
		public List<DeclaracionesContext> declaraciones() {
			return getRuleContexts(DeclaracionesContext.class);
		}
		public DeclaracionesContext declaraciones(int i) {
			return getRuleContext(DeclaracionesContext.class,i);
		}
		public List<Declaracion_asignacionContext> declaracion_asignacion() {
			return getRuleContexts(Declaracion_asignacionContext.class);
		}
		public Declaracion_asignacionContext declaracion_asignacion(int i) {
			return getRuleContext(Declaracion_asignacionContext.class,i);
		}
		public List<AsignacionContext> asignacion() {
			return getRuleContexts(AsignacionContext.class);
		}
		public AsignacionContext asignacion(int i) {
			return getRuleContext(AsignacionContext.class,i);
		}
		public List<LecturaContext> lectura() {
			return getRuleContexts(LecturaContext.class);
		}
		public LecturaContext lectura(int i) {
			return getRuleContext(LecturaContext.class,i);
		}
		public List<EscrituraContext> escritura() {
			return getRuleContexts(EscrituraContext.class);
		}
		public EscrituraContext escritura(int i) {
			return getRuleContext(EscrituraContext.class,i);
		}
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterSentencias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitSentencias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gVisitor ) return ((gVisitor<? extends T>)visitor).visitSentencias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3 || _la==ID) {
				{
				setState(31);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(26);
					declaraciones();
					}
					break;
				case 2:
					{
					setState(27);
					declaracion_asignacion();
					}
					break;
				case 3:
					{
					setState(28);
					asignacion();
					}
					break;
				case 4:
					{
					setState(29);
					lectura();
					}
					break;
				case 5:
					{
					setState(30);
					escritura();
					}
					break;
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionesContext extends ParserRuleContext {
		public Token ID;
		public TipoContext tipo;
		public TerminalNode ID() { return getToken(gParser.ID, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(gParser.PUNTO_COMA, 0); }
		public DeclaracionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaraciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterDeclaraciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitDeclaraciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gVisitor ) return ((gVisitor<? extends T>)visitor).visitDeclaraciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionesContext declaraciones() throws RecognitionException {
		DeclaracionesContext _localctx = new DeclaracionesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaraciones);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(36);
			((DeclaracionesContext)_localctx).ID = match(ID);
			setState(37);
			((DeclaracionesContext)_localctx).tipo = tipo();
			setState(38);
			match(PUNTO_COMA);
			}

			String variableId = (((DeclaracionesContext)_localctx).ID!=null?((DeclaracionesContext)_localctx).ID.getText():null);

			        if (!tabla_simbolos.containsKey(variableId)) {
			            System.out.println("Declarando variable");
			            tabla_simbolos.put(variableId, new VariableInfo((((DeclaracionesContext)_localctx).tipo!=null?_input.getText(((DeclaracionesContext)_localctx).tipo.start,((DeclaracionesContext)_localctx).tipo.stop):null), 0));
			        } else {
			            System.out.println("Error: Variable '" + variableId + "' ya declarada.");
			        }

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracion_asignacionContext extends ParserRuleContext {
		public Token ID;
		public TipoContext tipo;
		public ExpresionContext expresion;
		public TerminalNode ID() { return getToken(gParser.ID, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IGUAL() { return getToken(gParser.IGUAL, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(gParser.PUNTO_COMA, 0); }
		public Declaracion_asignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterDeclaracion_asignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitDeclaracion_asignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gVisitor ) return ((gVisitor<? extends T>)visitor).visitDeclaracion_asignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracion_asignacionContext declaracion_asignacion() throws RecognitionException {
		Declaracion_asignacionContext _localctx = new Declaracion_asignacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracion_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(42);
			((Declaracion_asignacionContext)_localctx).ID = match(ID);
			setState(43);
			((Declaracion_asignacionContext)_localctx).tipo = tipo();
			setState(44);
			match(IGUAL);
			setState(45);
			((Declaracion_asignacionContext)_localctx).expresion = expresion();
			setState(46);
			match(PUNTO_COMA);
			}


			     String variableId = (((Declaracion_asignacionContext)_localctx).ID!=null?((Declaracion_asignacionContext)_localctx).ID.getText():null);
			     String variableTipo = (((Declaracion_asignacionContext)_localctx).tipo!=null?_input.getText(((Declaracion_asignacionContext)_localctx).tipo.start,((Declaracion_asignacionContext)_localctx).tipo.stop):null);
			         if (!tabla_simbolos.containsKey(variableId)) {
			             Object expresionValue = ((Declaracion_asignacionContext)_localctx).expresion.value;

			             if (expresionValue != null) {
			                  switch (expresionValue.getClass().getSimpleName()) {
			                          case "Integer":
			                              if (variableTipo.equals("Entero")) {
			                                System.out.println("Declarando y asignando variable");
			                                tabla_simbolos.put(variableId, new VariableInfo((((Declaracion_asignacionContext)_localctx).tipo!=null?_input.getText(((Declaracion_asignacionContext)_localctx).tipo.start,((Declaracion_asignacionContext)_localctx).tipo.stop):null), expresionValue));
			                              } else {
			                                  System.out.println("Error: Tipo de variable '" + variableId + "' no coincide con el tipo de la expresión.");
			                              }
			                              break;
			                          case "String":
			                              if (variableTipo.equals("Texto")) {
			                                  System.out.println("Declarando y asignando variable");
			                                  tabla_simbolos.put(variableId, new VariableInfo((((Declaracion_asignacionContext)_localctx).tipo!=null?_input.getText(((Declaracion_asignacionContext)_localctx).tipo.start,((Declaracion_asignacionContext)_localctx).tipo.stop):null), expresionValue));
			                              } else {
			                                  System.out.println("Error: Tipo de variable '" + variableId + "' no coincide con el tipo de la expresión.");
			                              }
			                              break;
			                          case "Double":
			                              if (variableTipo.equals("Real")) {
			                                  System.out.println("Declarando y asignando variable");
			                                  tabla_simbolos.put(variableId, new VariableInfo((((Declaracion_asignacionContext)_localctx).tipo!=null?_input.getText(((Declaracion_asignacionContext)_localctx).tipo.start,((Declaracion_asignacionContext)_localctx).tipo.stop):null), expresionValue));
			                              } else {
			                                  System.out.println("Error: Tipo de variable '" + variableId + "' no coincide con el tipo de la expresión.");
			                              }
			                              break;
			                          default:
			                              System.out.println("Error: Tipo de dato no compatible '" + expresionValue.getClass().getSimpleName() + "'.");
			                  }
			             }
			         } else {
			             System.out.println("Error: Variable '" + variableId + "' ya declarada.");
			         }

			 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public Token ID;
		public ExpresionContext expresion;
		public TerminalNode ID() { return getToken(gParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(gParser.IGUAL, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(gParser.PUNTO_COMA, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitAsignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gVisitor ) return ((gVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			((AsignacionContext)_localctx).ID = match(ID);
			setState(51);
			match(IGUAL);
			setState(52);
			((AsignacionContext)_localctx).expresion = expresion();
			setState(53);
			match(PUNTO_COMA);
			String variableId = (((AsignacionContext)_localctx).ID!=null?((AsignacionContext)_localctx).ID.getText():null);
			     VariableInfo variableInfo = tabla_simbolos.get(variableId);

			     if (variableInfo != null) {
			         Object expresionValue = ((AsignacionContext)_localctx).expresion.value;

			        if (expresionValue != null) {
			             switch (expresionValue.getClass().getSimpleName()) {
			                     case "Integer":
			                         if (variableInfo.getType().equals("Entero")) {
			                             System.out.println("Asignando variable");
			                             variableInfo.setValue(expresionValue);
			                         } else {
			                             System.out.println("Error: Tipo de variable '" + variableId + "' no coincide con el tipo de la expresión.");
			                         }
			                         break;
			                     case "String":
			                         if (variableInfo.getType().equals("Texto")) {
			                             System.out.println("Asignando variable");
			                             variableInfo.setValue(expresionValue);
			                         } else {
			                             System.out.println("Error: Tipo de variable '" + variableId + "' no coincide con el tipo de la expresión.");
			                         }
			                         break;
			                     case "Double":
			                         if (variableInfo.getType().equals("Real")) {
			                             System.out.println("Asignando variable");
			                             variableInfo.setValue(expresionValue);
			                         } else {
			                             System.out.println("Error: Tipo de variable '" + variableId + "' no coincide con el tipo de la expresión.");
			                         }
			                         break;
			                     default:
			                         System.out.println("Error: Tipo de dato no compatible '" + expresionValue.getClass().getSimpleName() + "'.");
			             }
			        }
			     } else {
			         System.out.println("Error: Variable '" + variableId + "' no declarada.");
			     }

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitTipo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gVisitor ) return ((gVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 14L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EscrituraContext extends ParserRuleContext {
		public ExpresionContext expresion;
		public TerminalNode ABRIR_PAR() { return getToken(gParser.ABRIR_PAR, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode CERRAR_PAR() { return getToken(gParser.CERRAR_PAR, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(gParser.PUNTO_COMA, 0); }
		public EscrituraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escritura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterEscritura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitEscritura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gVisitor ) return ((gVisitor<? extends T>)visitor).visitEscritura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EscrituraContext escritura() throws RecognitionException {
		EscrituraContext _localctx = new EscrituraContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_escritura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__3);
			setState(59);
			match(ABRIR_PAR);
			setState(60);
			((EscrituraContext)_localctx).expresion = expresion();
			setState(61);
			match(CERRAR_PAR);
			setState(62);
			match(PUNTO_COMA);
			System.out.println(((EscrituraContext)_localctx).expresion.value);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LecturaContext extends ParserRuleContext {
		public Token ID;
		public LlamadaCapturaContext llamadaCaptura;
		public TerminalNode ID() { return getToken(gParser.ID, 0); }
		public TerminalNode IGUAL() { return getToken(gParser.IGUAL, 0); }
		public LlamadaCapturaContext llamadaCaptura() {
			return getRuleContext(LlamadaCapturaContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(gParser.PUNTO_COMA, 0); }
		public LecturaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lectura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterLectura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitLectura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gVisitor ) return ((gVisitor<? extends T>)visitor).visitLectura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LecturaContext lectura() throws RecognitionException {
		LecturaContext _localctx = new LecturaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lectura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(65);
			((LecturaContext)_localctx).ID = match(ID);
			setState(66);
			match(IGUAL);
			setState(67);
			((LecturaContext)_localctx).llamadaCaptura = llamadaCaptura();
			setState(68);
			match(PUNTO_COMA);
			}

			     String variableId = (((LecturaContext)_localctx).ID!=null?((LecturaContext)_localctx).ID.getText():null);
			     VariableInfo variableInfo = tabla_simbolos.get(variableId);

			        if (variableInfo != null) {
			         Object expresionValue = ((LecturaContext)_localctx).llamadaCaptura.value;
			                 System.out.println("Lectura exitosa");
			                 variableInfo.setValue(expresionValue);
			         }else {
			           System.out.println("Error: Variable '" + variableId + "' no declarada.");
			         }


			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LlamadaCapturaContext extends ParserRuleContext {
		public Object value;
		public LlamadaCapturaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llamadaCaptura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterLlamadaCaptura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitLlamadaCaptura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gVisitor ) return ((gVisitor<? extends T>)visitor).visitLlamadaCaptura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LlamadaCapturaContext llamadaCaptura() throws RecognitionException {
		LlamadaCapturaContext _localctx = new LlamadaCapturaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_llamadaCaptura);
		try {
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(T__4);
